Bug 504560 - qt.qml.typeregistration: Invalid QML element name "Hint"; value type names should begin with a lowercase letter
Summary: qt.qml.typeregistration: Invalid QML element name "Hint"; value type names sh...
Status: RESOLVED FIXED
Alias: None
Product: kinfocenter
Classification: Applications
Component: general (other bugs)
Version First Reported In: 6.3.5
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: Akseli Lahtinen
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-05-20 11:05 UTC by Laurent Bonnaud
Modified: 2025-05-20 13:49 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Laurent Bonnaud 2025-05-20 11:05:55 UTC
SUMMARY

When I start kinfocenter from a terminal, an error message is displayed:

$ kinfocenter
qt.qml.typeregistration: Invalid QML element name "Hint"; value type names should begin with a lowercase letter

OBSERVED RESULT

Error message

EXPECTED RESULT

No error message

SOFTWARE/OS VERSIONS

$ kinfo
Operating System: Kubuntu 25.04
KDE Plasma Version: 6.3.5
KDE Frameworks Version: 6.14.0
Qt Version: 6.8.3
Kernel Version: 6.14.7-061407-generic (64-bit)
Graphics Platform: X11
Comment 1 Bug Janitor Service 2025-05-20 12:12:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kinfocenter/-/merge_requests/251
Comment 2 Akseli Lahtinen 2025-05-20 12:50:26 UTC
Git commit 90e90ec613e076c98fffd294a50a35e25491c4f8 by Akseli Lahtinen.
Committed on 20/05/2025 at 12:11.
Pushed by akselmo into branch 'master'.

Change uncreatable type name "Hint to "hint"

Typeregistration throws a warning if value type name begins uppercase:

qt.qml.typeregistration: Invalid QML element name "Hint"; value type
names should begin with a lowercase letter
FIXED-IN: 6.4

M  +1    -1    kcms/about-distro/src/main.cpp
M  +6    -6    kcms/about-distro/src/ui/main.qml

https://invent.kde.org/plasma/kinfocenter/-/commit/90e90ec613e076c98fffd294a50a35e25491c4f8
Comment 3 Akseli Lahtinen 2025-05-20 13:34:05 UTC
Git commit c5d612a917c74c9419b4726300ff5cb98e8442bd by Akseli Lahtinen.
Committed on 20/05/2025 at 13:26.
Pushed by akselmo into branch 'Plasma/6.4'.

🍒 Change uncreatable type name "Hint to "hint"

Typeregistration throws a warning if value type name begins uppercase:

qt.qml.typeregistration: Invalid QML element name "Hint"; value type
names should begin with a lowercase letter
FIXED-IN: 6.4

(cherry picked from commit 90e90ec613e076c98fffd294a50a35e25491c4f8)

Co-authored-by: Akseli Lahtinen <akselmo@akselmo.dev>

M  +1    -1    kcms/about-distro/src/main.cpp
M  +6    -6    kcms/about-distro/src/ui/main.qml

https://invent.kde.org/plasma/kinfocenter/-/commit/c5d612a917c74c9419b4726300ff5cb98e8442bd
Comment 4 Laurent Bonnaud 2025-05-20 13:49:33 UTC
Thank you for the quick fix!