Change uncreatable type name "Hint to "hint"

Typeregistration throws a warning if value type name begins uppercase:

qt.qml.typeregistration: Invalid QML element name "Hint"; value type
names should begin with a lowercase letter

BUG: 504560
FIXED-IN: 6.4